--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <select name="color" id="color-selector">
+        <option value="light">Light</option>
+        <option value="dark">Dark</option>
+        </select>
     <div class="content">
         <header class="title">
             <h1>Mission Statement</h1>
@@ -36,8 +40,10 @@
             </ol>
         </main>
         <footer>
-            <img src="byui-logo_blue.webp" alt="BYUI Logo" class="Logo" />
+            <img src="byui-logo_blue.webp" alt="BYUI Logo" class="logo" id="BYUI-Logo" />
+            <img src="darkbyui.png" alt="Dark BYUI Logo" class="logo" id="Dark-BYUI-Logo" />
         </footer>
     </div>
+    <script src="mission.js"></script>
   </body>
 </html>
