--- a/index.html
+++ b/index.html
@@ -1,49 +1,70 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="author" content="Kevin Frehner" />
-    <title>Mission Statement</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <select name="color" id="color-selector">
-        <option value="light">Light</option>
-        <option value="dark">Dark</option>
-        </select>
-    <div class="content">
-        <header class="title">
-            <h1>Mission Statement</h1>
-            <h2>Brigham Young University-Idaho</h2>
-        </header>
-        <main>
-            <p>
-                Brigham Young University-Idaho was founded and is supported and guided by The Church of Jesus Christ of Latter-day Saints. Its mission is to develop disciples of Jesus Christ who are leaders in their homes, the Church, and their communities.
-            </p>
-            <p><em>The University does this by:</em></p>
-            <ol class="does-list">
-                <li>
-                    Building testimonies of the restored gospel of Jesus Christ and
-					fostering its principles in a wholesome academic, cultural, and
-					social environment.
-                </li>
-                <li>
-                    Providing a high-quality education that prepares students of diverse
-					interests and abilities for lifelong learning and employment.
-                </li>
-                <li>
-                    Serving as many students as possible within resource constraints.
-                </li>
-                <li>
-                    Delivering education that is affordable for students and the Church.
-                </li>
-            </ol>
-        </main>
-        <footer>
-            <img src="byui-logo_blue.webp" alt="BYUI Logo" class="logo" id="BYUI-Logo" />
-            <img src="darkbyui.png" alt="Dark BYUI Logo" class="logo" id="Dark-BYUI-Logo" />
-        </footer>
-    </div>
-    <script src="mission.js"></script>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="stylesheet" href="coolpics.css" />
+        <script src="coolpics.js" defer></script>
+        <title>Cool Pictures</title>
+    </head>
+    <body>
+        <div class="content">
+            <header class="title">
+                <h1>Cool Pictures</h1>
+                <h2><button class="menu-button">Menu</button></h2>
+                <nav>
+                    <ul class="nav-links">
+                      <li><a href="#home">Home</a></li>
+                      <li><a href="#people">People</a></li>
+                      <li><a href="#places">Places</a></li>
+                      <li><a href="#about">About</a></li>
+                      <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <main>
+                <section class="gallery">
+                <figure>
+                    <figcaption>Norris</figcaption>
+                    <img src="norris-sm.jpeg" alt="picture 1">
+                </figure>
+                <figure>
+                    <figcaption>Norris</figcaption>
+                    <img src="norris-full.jpeg" alt="picture 2">
+                </figure>
+                <figure>
+                    <figcaption>Norris</figcaption>
+                    <img src="norris-sm.jpeg" alt="picture 3">
+                </figure>
+                <figure>
+                    <figcaption>Norris</figcaption>
+                    <img src="norris-sm.jpeg" alt="picture 4">
+                </figure>
+                <figure>
+                    <figcaption>Norris</figcaption>
+                    <img src="norris-sm.jpeg" alt="picture 5">
+                </figure>
+                <figure>
+                    <figcaption>Norris</figcaption>
+                    <img src="norris-sm.jpeg" alt="picture 6">
+                </figure>
+                <figure>
+                    <figcaption>Norris</figcaption>
+                    <img src="norris-sm.jpeg" alt="picture 7">
+                </figure>
+                <figure>
+                    <figcaption>Norris</figcaption>
+                    <img src="norris-sm.jpeg" alt="picture 8">
+                </figure>
+                <figure>
+                    <figcaption>Norris</figcaption>
+                    <img src="norris-sm.jpeg" alt="picture 9">
+                </figure>
+                </section>
+            </main>
+        </div>
+
+    </body>
+    <footer>
+        <h1> ©2023 Not a real site 😀.</h1>
+    </footer>
 </html>
