--- a/index.html
+++ b/index.html
@@ -25,46 +25,45 @@
                 <section class="gallery">
                 <figure>
                     <figcaption>Norris</figcaption>
-                    <img src="norris-sm.jpeg" alt="picture 1">
+                    <img src="norris-sm.jpeg" alt="picture 1" class="gallery-img">
                 </figure>
                 <figure>
                     <figcaption>Norris</figcaption>
-                    <img src="norris-full.jpeg" alt="picture 2">
+                    <img src="norris-full.jpeg" alt="picture 2" class="gallery-img">
                 </figure>
                 <figure>
                     <figcaption>Norris</figcaption>
-                    <img src="norris-sm.jpeg" alt="picture 3">
+                    <img src="norris-sm.jpeg" alt="picture 3" class="gallery-img">
                 </figure>
                 <figure>
                     <figcaption>Norris</figcaption>
-                    <img src="norris-sm.jpeg" alt="picture 4">
+                    <img src="norris-sm.jpeg" alt="picture 4" class="gallery-img">
                 </figure>
                 <figure>
                     <figcaption>Norris</figcaption>
-                    <img src="norris-sm.jpeg" alt="picture 5">
+                    <img src="norris-sm.jpeg" alt="picture 5" class="gallery-img">
                 </figure>
                 <figure>
                     <figcaption>Norris</figcaption>
-                    <img src="norris-sm.jpeg" alt="picture 6">
+                    <img src="norris-sm.jpeg" alt="picture 6" class="gallery-img">
                 </figure>
                 <figure>
                     <figcaption>Norris</figcaption>
-                    <img src="norris-sm.jpeg" alt="picture 7">
+                    <img src="norris-sm.jpeg" alt="picture 7" class="gallery-img">
                 </figure>
                 <figure>
                     <figcaption>Norris</figcaption>
-                    <img src="norris-sm.jpeg" alt="picture 8">
+                    <img src="norris-sm.jpeg" alt="picture 8" class="gallery-img">
                 </figure>
                 <figure>
                     <figcaption>Norris</figcaption>
-                    <img src="norris-sm.jpeg" alt="picture 9">
+                    <img src="norris-sm.jpeg" alt="picture 9" class="gallery-img">
                 </figure>
                 </section>
             </main>
         </div>
-
-    </body>
     <footer>
         <h1> ©2023 Not a real site 😀.</h1>
-    </footer>
+     </footer>
+    </body>
 </html>
