--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 </head>
 <body>
     <header>
-        <img src="recipe-book.png" alt="Recipe Book Logo">
+        <a href="#" onclick="location.reload();" display: flex; align-items: center; text-decoration: none; color: inherit;></a>
+        <img src="recipe-book.png" alt="Recipe Book Logo" style="cursor: pointer;">
         <h1>Recipe Book</h1>
     </header>
     
@@ -40,6 +41,6 @@
         </div>
     </footer>
     
-    <script src="main.js" defer></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
